export spec for windows dll

--- a/vs/driver/driver.vcxproj.filters
+++ b/vs/driver/driver.vcxproj.filters
@@ -66,4 +66,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="exports.def">
+      <Filter>Файлы исходного кода</Filter>
+    </None>
+  </ItemGroup>
 </Project>
