ConfigDSN stub and more export

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
 build
+
 *.db
+*.pdb
 *.opendb
-vs/.vs
-vs/Debug
-vs/Release
-vs/driver/Debug
-vs/driver/Release
+*.lib
+*.dll
+*.obj
+*.aps
+
+vs/.vs/*
+vs/driver64/.vs/*
+vs/driver64/x64/Debug/*
+vs/driver64/x64/Release/*
+vs/driver/x64/Debug/*
+vs/driver/x64/Release/*
+vs/driver/Debug/*
+vs/driver/Release/*
+vs/x64/Debug/*
+vs/x64/Release/*
+vs/Debug/*
+vs/Release/*
