--- a/vs/driver64/driver64.vcxproj.filters
+++ b/vs/driver64/driver64.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="..\..\driver\utils.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\driver\attr.cpp">
@@ -73,5 +76,10 @@
     <None Include="export.def">
       <Filter>Файлы исходного кода</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="driver64.rc">
+      <Filter>Файлы ресурсов</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
