--- a/vs/driver/driver32.vcxproj
+++ b/vs/driver/driver32.vcxproj
@@ -91,7 +91,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;ODBC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\stanly\Documents\Visual Studio 2015\Projects\Poco\Net\include;C:\Users\stanly\Documents\Visual Studio 2015\Projects\Poco\Foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\driver64;C:\Users\stanly\Documents\Visual Studio 2015\Projects\Poco\Net\include;C:\Users\stanly\Documents\Visual Studio 2015\Projects\Poco\Foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -124,7 +124,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;ODBC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\stanly\Documents\Visual Studio 2015\Projects\Poco\Net\include;C:\Users\stanly\Documents\Visual Studio 2015\Projects\Poco\Foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\driver64;C:\Users\stanly\Documents\Visual Studio 2015\Projects\Poco\Net\include;C:\Users\stanly\Documents\Visual Studio 2015\Projects\Poco\Foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -165,6 +165,7 @@
     <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\statement.h" />
     <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\string_ref.h" />
     <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\utils.h" />
+    <ClInclude Include="..\driver64\resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\attr.cpp" />
@@ -185,6 +186,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="export.def" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\driver64\driver64.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
