--- a/vs/driver/driver32.vcxproj
+++ b/vs/driver/driver32.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\odbc.cpp" />
     <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\result_set.cpp" />
     <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\statement.cpp" />
+    <ClCompile Include="..\..\driver\connection.cpp" />
     <ClCompile Include="..\..\driver\main.cpp" />
   </ItemGroup>
   <ItemGroup>
