--- a/vs/driver64/driver64.vcxproj
+++ b/vs/driver64/driver64.vcxproj
@@ -164,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\driver\attr.cpp" />
+    <ClCompile Include="..\..\driver\connection.cpp" />
     <ClCompile Include="..\..\driver\handles.cpp" />
     <ClCompile Include="..\..\driver\info.cpp" />
     <ClCompile Include="..\..\driver\main.cpp" />
