--- a/vs/driver64/driver64.vcxproj.filters
+++ b/vs/driver64/driver64.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClCompile Include="..\..\driver\connection.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\driver\diagnostics.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="export.def">
