add cpp to CMakeLists

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(clickhouse-odbc SHARED
     attr.cpp
+    connection.cpp
+    diagnostics.cpp
     handles.cpp
     info.cpp
     odbc.cpp
