unify names of win projects

--- a/.gitignore
+++ b/.gitignore
@@ -7,25 +7,26 @@ build
 *.dll
 *.obj
 *.aps
+*.user
 
 vs/.vs/*
+vs/driver32/.vs/*
+vs/driver32/Debug/*
+vs/driver32/Release/*
 vs/driver32w/.vs/*
 vs/driver32w/Debug/*
 vs/driver32w/Release/*
 vs/driver64/.vs/*
 vs/driver64/x64/Debug/*
 vs/driver64/x64/Release/*
-vs/odbc64w/.vs/*
-vs/odbc64w/x64/Debug/*
-vs/odbc64w/x64/Release/*
-vs/driver/x64/Debug/*
-vs/driver/x64/Release/*
-vs/driver/Debug/*
-vs/driver/Release/*
+vs/driver64w/.vs/*
+vs/driver64w/x64/Debug/*
+vs/driver64w/x64/Release/*
 vs/x64/Debug/*
 vs/x64/Release/*
 vs/Debug/*
 vs/Release/*
-vs/installer/obj/*
-vs/installer/bin/*
-*.user
+vs/installer32/obj/*
+vs/installer32/bin/*
+vs/installer64/obj/*
+vs/installer64/bin/*
