fix path to file in vs

--- a/vs/driver64/driver64.vcxproj
+++ b/vs/driver64/driver64.vcxproj
@@ -151,7 +151,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\driver\connection.h" />
-    <ClInclude Include="..\..\driver\diagnostic_record.h" />
+    <ClInclude Include="..\..\driver\diagnostics.h" />
     <ClInclude Include="..\..\driver\environment.h" />
     <ClInclude Include="..\..\driver\log.h" />
     <ClInclude Include="..\..\driver\platform.h" />
