--- a/vs/driver64/driver64.vcxproj.filters
+++ b/vs/driver64/driver64.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="..\..\driver\connection.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\driver\diagnostic_record.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\driver\environment.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
@@ -47,6 +44,9 @@
     </ClInclude>
     <ClInclude Include="..\..\driver\win\resource.h">
       <Filter>Файлы ресурсов</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\driver\diagnostics.h">
+      <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
