--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories (${Poco_INCLUDE_DIRS})
+
 add_library(clickhouse-odbc SHARED
     attr.cpp
     connection.cpp
@@ -15,6 +17,6 @@ set_target_properties(clickhouse-odbc
 )
 
 target_link_libraries(clickhouse-odbc
-    PocoNet
-    PocoFoundation
+    ${Poco_Net_LIBRARY}
+    ${Poco_Foundation_LIBRARY}
 )
