--- a/vs/driver64/driver64.vcxproj
+++ b/vs/driver64/driver64.vcxproj
@@ -104,7 +104,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;DRIVER64_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\Poco\Net\include;$(SolutionDir)..\..\Poco\Foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\contrib\poco\Net\include;$(SolutionDir)..\contrib\poco\Foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -139,7 +139,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;DRIVER64_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\Poco\Net\include;$(SolutionDir)..\..\Poco\Foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\contrib\poco\Net\include;$(SolutionDir)..\contrib\poco\Foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -181,10 +181,10 @@
     <None Include="..\..\driver\win\export.def" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Poco\Foundation\Foundation_x64_vs140.vcxproj">
-      <Project>{8164d41d-b053-405b-826c-cf37ac0ef176}</Project>
+    <ProjectReference Include="..\..\contrib\poco\Foundation\Foundation_x64_vs140.vcxproj">
+      <Project>{b01196cc-b693-4548-8464-2ff60499e73f}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Poco\Net\Net_x64_vs140.vcxproj">
+    <ProjectReference Include="..\..\contrib\poco\Net\Net_x64_vs140.vcxproj">
       <Project>{b057a1fe-09f7-465e-b8b5-e1b659051d76}</Project>
     </ProjectReference>
   </ItemGroup>
