--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,4 +59,8 @@ message(STATUS "Using Poco: ${Poco_INCLUDE_DIRS} : ${Poco_Foundation_LIBRARY},${
 message (STATUS "Building for: ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR} ${CMAKE_LIBRARY_ARCHITECTURE}")
 
 add_subdirectory (contrib)
+
+# Remove pthread from linking poco's Net
+set_property(TARGET Net PROPERTY INTERFACE_LINK_LIBRARIES "")
+
 add_subdirectory (driver)
